--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
         position: relative;
         justify-content: space-between;
         font-weight: 500;
+        height: 48px;
 
         .name {
             font-size: 1.5rem;
@@ -25,7 +26,7 @@
 
             img {
                 margin-bottom: 1rem;
-                width: 4.5rem;
+                width: 10.5rem;
             }
         }
 
